@@ -1,6 +1,6 @@
 project.dir=
 project.name=phpmd
-project.version=0.2.6
+project.version=0.2.7
 project.stability=alpha
 
 coding.standard=PEAR
